--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
   <p>This is my first webpage</p>
-  <img src="wildseed.jpg">
+  <img src="wildseed.jpg"height="400">
 </html>
