--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
   <p>This is my first webpage</p>
-  <img src="wildseed.jpg"height="400">
+  <body>
+  <img src="virtuallandscape.jpg"height="400">
+  <h1>This my Intro to New Media page.</h1>
+    <p>From this page you can access all my homework for HUW 112</p>
+    <ul>
+      <li><a href="wildseedpotrait.html">Here is a link to my Wildseed Potrait</a></li>
+      </body>
 </html>
