--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <h1>This my Intro to New Media page.</h1>
     <p>From this page you can access all my homework for HUW 112</p>
     <ul>
-      <li><a href="wildseedpotrait.html">Here is a link to my Wildseed Potrait</a></li>
+      <li><a href="wildseedportrait.html">Here is a link to my Wildseed Potrait</a></li>
       </body>
 </html>
