--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <p>From this page you can access all my homework for HUW 112</p>
     <ul>
       <li><a href="wildseedportrait.html">Here is a link to my Wildseed Potrait</a></li>
-      
+      <li><a href="pattern.html">Here is a link to my Pattern</a></li>
       </body>
 </html>
