--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <ul>
       <li><a href="wildseedportrait.html">Here is a link to my Wildseed Potrait</a></li>
       <li><a href="pattern.html">Here is a link to my Pattern</a></li>
+      <li><a href="logo.html">Here is a link to my Logo</a></li>
       </body>
 </html>
