--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <li><a href="wildseedportrait.html">Here is a link to my Wildseed Potrait</a></li>
       <li><a href="pattern.html">Here is a link to my Pattern</a></li>
       <li><a href="logo.html">Here is a link to my Logo</a></li>
+      <li><a href="film.html">Here is a link to my film</a></li>
       </body>
 </html>
