--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <h1>This my Intro to New Media page.</h1>
     <p>From this page you can access all my homework for HUW 112</p>
     <ul>
-      <li><a href="wildseedportrait.html">Here is a link to my Wildseed Potrait</a></li>
+      <li><a href="wildseedportrait.html">Here is a link to my Alter Ego Potrait</a></li>
       <li><a href="pattern.html">Here is a link to my Pattern</a></li>
-      <li><a href="logo.html">Here is a link to my Logo</a></li>
+      <li><a href="logo.html">Here is a link to my Color Study</a></li>
       <li><a href="film.html">Here is a link to my film</a></li>
       </body>
 </html>
