--- a/movie.html
+++ b/movie.html
@@ -1,1 +1,2 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-Fvn9C6b6WE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qso4MRfidrw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
