--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <p>This is my first webpage name here</p>
+  <head>
+  </head>
+  <style>
+    image { width: 100%;
+      height: auto;}
+      
+  </style>
   <body>
   <img src="virtual landscape.jpg"height="400">
   <h1>This my Intro to New Media page.</h1>
